syntax = "proto3";
option go_package = "openline-ai/oasis-api/proto";

message NewMessage {
  int64 conversationId = 1;
  int64 conversationItemId = 2;
}

message OasisEmpty{
}
service OasisApiService {
  rpc newMessageEvent(NewMessage) returns (OasisEmpty) {};
}